--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <!--CONTEM ABAIXO DO MENU-->
         <div class="continer-conteudos">
             <div class="conteudoladoesquerdo">
-                <h1>Olá a todos, Seja bem vindo (a)</h1>
-                <span>Me chamo Ruan Santos!</span>
+                <h1 id="letra">Olá a todos, Seja bem vindo (a) 
+                Me chamo Ruan Santos!</h1>
                 <h2>Front End Developer</h2>
 
                 <!--CONTAINER COM MINHAS LOGOS REDES SOCIAIS--> 
