--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>Portifolio | Ruan</title>
 </head>
 <body>
+   <!-- <div class="cardbakgraund"></div>-->
     <header class="containerheader">
         <section class="meuheader">
             <nav class="menu">
