--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rubik+Broken+Fax&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Scope+One&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -20,9 +24,8 @@
         <section class="meuheader">
             <nav class="menu">
                 <div class="logo">
-                    <span>RuanSantos </span>
                 </div>
-
+<!--MEU MENU, CONTEM MEUS LINKS-->
                 <div class="links">
                     <ul>
                         <li>HOME</li>
@@ -35,7 +38,32 @@
         </section>
 
         <section class="donwheader">
+            <!--MEU IDENTIFICADOR OLÁ-->
+            <div class="conteinerleft">
+                <span>Olá, Seja bem vindo (a)! 
+                Me chamo:</span>
+                <h1 class="meunome">
+                    RUAN   
+                    DOS 
+                    SANTOS <i class="bi bi-github"></i>
+                </h1>
 
+                <!--MEUS LINKS DE REDES SOCIAIS-->
+                <div class="meuslinks">
+                    <!--WHATSAPP-->
+                    <a href="#" target="_blank" rel="noopener noreferrer"> <i class="bi bi-whatsapp " > WHATSAPP </i></a>
+
+                    <!--INSTAGRAM-->
+                    <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram" > INSTAGRAM</i></a>
+
+                    <!--GITHUB-->
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"> GITHUB</i></a>
+
+                    <!--GAMAIL-->
+                    <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-envelope-at-fill"> E-MAIL</i></a>
+                </div>
+            </div>
+            <div class="conteinerrigth"></div>
         </section>
     </header>
 
