--- a/index.html
+++ b/index.html
@@ -3,48 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rubik+Broken+Fax&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    
-
-    <link rel="stylesheet" href="css/style.css">
-    <title>Portifolio | Ruan</title>
+    <title>Portifol | Ruan Santos</title>
 </head>
 <body>
-   <!-- <div class="cardbakgraund"></div>-->
-    <header class="containerheader">
-        <section class="meuheader">
-            <nav class="menu">
-                <div class="logo">
-                    <span>RuanSantos </span>
-                </div>
-
-                <div class="links">
-                    <ul>
-                        <li>HOME</li>
-                        <li>SOBRE</li>
-                        <li>PROJETOS</li>
-                        <li>ONDE ME ENCONTRAR!?</li>
-                    </ul>
-                </div>
-            </nav>
-        </section>
-
-        <section class="donwheader">
-
-        </section>
+    <header>
+        
     </header>
-
-    <main>
-
-    </main>
-
-    <footer>
-
-    </footer>
 </body>
 </html>
