--- a/index.html
+++ b/index.html
@@ -44,31 +44,42 @@
         <section class="donwheader">
             <!--MEU IDENTIFICADOR OLÁ-->
             <div class="conteinerleft">
-                <span>Olá, Seja bem vindo (a)! 
-                Me chamo:</span>
+                <span id="text">Olá, Seja bem vindo (a), eu me chamo:</span>
                 <h1 class="meunome">
                     RUAN   
                     DOS 
-                    SANTOS <i class="bi bi-github"></i>
+                    SANTOS <a href="https://github.com/Ruandossantos" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+                    </i>
                 </h1>
 
                 <!--MEUS LINKS DE REDES SOCIAIS-->
                 <div class="meuslinks">
+                    <!--LINKEDIN-->
+                    <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"> Linkedin</i></a>
                     <!--WHATSAPP-->
-                    <a href="#" target="_blank" rel="noopener noreferrer"> <i class="bi bi-whatsapp " > WHATSAPP </i></a>
+                    <a href="#" target="_blank" rel="noopener noreferrer"> <i class="bi bi-whatsapp " > Whatsapp </i></a>
 
                     <!--INSTAGRAM-->
-                    <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram" > INSTAGRAM</i></a>
+                    <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram" > Instagram</i></a>
 
                     <!--GITHUB-->
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"> GITHUB</i></a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"> Github</i></a>
 
                     <!--GAMAIL-->
-                    <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-envelope-at-fill"> E-MAIL</i></a>
+                    <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-envelope-at-fill"> E-mail</i></a>
+                </div>
+
+                <!--BOTÃO SOBRE (ABAIXO DO MEUS LINKS DO HEADER)-->
+                <div class="botaosobre">
+                    <button>MAIS SOBRE<a href="#" target="_blank" rel="noopener noreferrer"></a></button>
                 </div>
             </div>
             <div class="conteinerrigth"></div>
         </section>
     </header>
+    
+    <script>
+        
+    </script>
 </body>
 </html>
