--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!--LINK BOOSTRAP-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
+    <!--LINK CSS, DESKTOP- UP 1280PX-->
+    <link rel="stylesheet" href="css/style.css">
     <!--LINK CSS, MOBILE-->
     <link rel="stylesheet" href="css/stylemobile.css">
     <title>Portifolio | Ruan Santos</title>
@@ -19,10 +21,10 @@
         <!--MEU MENU, CONTER LINKS-->
         <nav class="menuvanegacao">
             <ul>
-                <li>INICIAL</li>
-                <li>SOBRE</li>
-                <li>HABILIDADES</li>
-                <li>FALE COMIGO!</li>
+                <li>Inicial</li>
+                <li>Sobre</li>
+                <li>Habilidades</li>
+                <li>Fale comigo!</li>
             </ul>
         </nav>
 
@@ -30,7 +32,7 @@
         <section class="secaoconteiner">
             <section class="ladoesquerdo">
                 <span>Olá, seja bem vindo (a), eu me chamo:</span>
-                <h1>Ruan dos santos <i class="bi bi-github"></i>
+                <h1 class="meunome">Ruan dos santos <i class="bi bi-github"></i>
                 </h1>
                 <h2>Developer Front-End | Técnico Telecom | Técnico Informatica</h2>
 
@@ -60,7 +62,9 @@
                 </div>
             </section>
 
-            <section class="ladodireito"></section>
+            <section class="ladodireito">
+                
+            </section>
         </section>
     </header>
 </body>
