--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 
     <!--FONTE MONTSERRAT-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
-   <!--FONTE ROBOTO-->
-   <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!--FONTE ROBOTO-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <!--LINK BOOSTRAP-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -26,6 +32,7 @@
     <link rel="stylesheet" href="css/stylemobile.css">
     <title>Portifolio | Ruan Santos</title>
 </head>
+
 <body>
     <header>
         <!--MEU MENU, CONTER LINKS-->
@@ -38,7 +45,7 @@
             </ul>
         </nav>
 
-<!--SEÇÃO COM MEUS CONTEUDOS, ABAIXO DO MENU-->
+        <!--SEÇÃO COM MEUS CONTEUDOS, ABAIXO DO MENU-->
         <section class="secaoconteiner">
             <section class="ladoesquerdo">
                 <span>Olá, seja bem vindo (a), eu me chamo:</span>
@@ -80,7 +87,34 @@
 
     <!--Conteiner main-->
     <main class="conteinermain">
-        
+
     </main>
+
+    <!--Meu Footer-->
+    <footer class="conteinerfooter">
+        <span class="meiocontato">MEIOS DE CONTATOS:</span>
+        <section class="conteudos">
+            <div class="contatosesquerda">
+                <ul>
+                    <li><span>Rua: </span>Rua São Francisco</li>
+                    <li><span>Bairro: </span>São Francisco</li>
+                    <li><span>Cidade: </span>Ibotirama-BA</li>
+                    <li><span>E-mail: </span>santtosr9909@gmail.com</li>
+                    <li><span>Telefone: </span>+55 77 9 9914-2095</li>
+                </ul>
+            </div>
+            <div class="contatosdireito">
+                <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"> Linkedin</i></a>
+                <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-facebook"> Facebook</i>
+                </a>
+                <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"> Instagram</i>
+                </a>
+                <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-whatsapp"> Whatsapp</i>
+                </a>
+            </div>
+        </section>
+        <span class="direito">Direitos reservados @ruandosantos</span>
+    </footer>
 </body>
+
 </html>
