--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <nav class="menuvanegacao">
             <ul>
                 <li>Inicial</li>
-                <li>Sobre</li>
+                <li class=".sobremin">Sobre</li>
                 <li>Habilidades</li>
                 <li>Fale comigo!</li>
             </ul>
@@ -87,8 +87,51 @@
 
     <!--Conteiner main-->
     <main class="conteinermain">
+        <section class="sobremin">
+            <div class="ladotexto">
+                <h1>SOBRE MIM</h1>
+                <div class="textosobremim">
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima itaque illum neque quod, velit
+                        dolorem at omnis eum quae nesciunt, sapiente quisquam cumque enim delectus aperiam et! Animi,
+                        neque asperiores?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis blanditiis magni ducimus,
+                        nostrum possimus sapiente cupiditate quae cum, libero corporis quo, esse aperiam mollitia autem
+                        aut aliquam architecto? Saepe, quia.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam doloremque placeat deleniti
+                        aliquid nisi quibusdam reiciendis! Amet atque, at blanditiis iusto, inventore neque nobis
+                        dolores minus delectus quidem perspiciatis ea?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum eius labore tenetur doloremque
+                        numquam, odio quaerat, in, consectetur iusto voluptas sequi facilis! Debitis omnis accusamus
+                        deleniti. Excepturi voluptates accusamus voluptatibus.</p>
+                </div>
+            </div>
+
+            <div class="ladofoto"></div>
+        </section>
+
+        <section class="abaportifolio">
+            <div class="habilidades">
+                <h1 class="textohabilidades">HABILIDADES</h1>
+
+                <div class="imagenshabilidades">
+                    <img src="/img/logo-css-3-256.png" alt="">
+                    <img src="/img/logo-html-5-256.png" alt="">
+                    <img src="/img/logo-javascript-256.png" alt="">
+                </div>
+                
+            </div>
+        </section>
+
+
+
+
+
 
     </main>
+
+
+
+
 
     <!--Meu Footer-->
     <footer class="conteinerfooter">
