--- a/index.html
+++ b/index.html
@@ -101,8 +101,12 @@
                         aliquid nisi quibusdam reiciendis! Amet atque, at blanditiis iusto, inventore neque nobis
                         dolores minus delectus quidem perspiciatis ea?
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum eius labore tenetur doloremque
-                        numquam, odio quaerat, in, consectetur iusto voluptas sequi facilis! Debitis omnis accusamus
-                        deleniti. Excepturi voluptates accusamus voluptatibus.</p>
+                        numquam, odio quaerat, in, consectetur iusto voluptas sequi facilis! Debitis omnis accusamus.</p>
+                </div>
+                <div class="imagenshabilidades">
+                    <img src="/img/logo-css-3-256.png" alt="">
+                    <img src="/img/logo-html-5-256.png" alt="">
+                    <img src="/img/logo-javascript-256.png" alt="">
                 </div>
             </div>
 
@@ -110,14 +114,9 @@
         </section>
 
         <section class="abaportifolio">
-            <div class="habilidades">
-                <h1 class="textohabilidades">HABILIDADES</h1>
-
-                <div class="imagenshabilidades">
-                    <img src="/img/logo-css-3-256.png" alt="">
-                    <img src="/img/logo-html-5-256.png" alt="">
-                    <img src="/img/logo-javascript-256.png" alt="">
-                </div>
+            <div class="portifolio">
+                <h1>Portifolio</h1>
+               
                 
             </div>
         </section>
