--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="containertop">
         <nav class="menudenvagação">
-            <p class="logo"> ruansantos/> </p>
+            <p class="logo"> ruansantos <span>/></span> </p>
             <ul> 
                 <li>Inicio</li>
                 <li>sobre mim</li>
@@ -36,6 +36,7 @@
                 <span class="nome">Olá, meu nome é</span>
                 <h1>Ruan dos santos</h1>
                 <h2>Desenvolvedor front-end | Técnico Telecomunicações | Técnico de Informatica</h2>
+                <a href="#" class="sbtnsobre" target="_blank" rel="noopener noreferrer">Mais Sobre</a>
             </section>
             <section class="imageminicial"></section>
         </section>
