--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         </nav>
         <section class="containerheader">
             <section class="logosredessociais">
-                <i class="bi bi-github"></i>
-                <i class="bi bi-instagram"></i>
-                <i class="bi bi-linkedin"></i>
-                <i class="bi bi-envelope-at"></i>
+                <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a></i>
+                <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
+                <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
+                <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-envelope-at"></i></a>
+                <div class="linha"></div>
             </section>
             <section class="meunometxt">
                 <span class="nome">Olá, meu nome é</span>
