--- a/index.html
+++ b/index.html
@@ -65,4 +65,57 @@
         </section>
     </section>
 
+    <section class="conteinersobremim">
+        <section class="sobremim">
+            <section class="conteinersobremim2">
+                <span id="sobremim">SOBRE MIM</span>
+                <div class="sobremim">
+                    <span id="umpouco">Um pouco sobre mim</span>
+                </div>
+            </section>
+            <section class="descricao">
+                <div class="descicaointer">
+                    <p id="paragrafo1">Eu me chamo <span id="mudacor">Ruan Santos</span> , Técnico em informatica,
+                        Telecomunicações, e futuro DEV</p>
+
+                    <span class="descricaosobremim">Olá, seja muito bem vindo(a) ao meu protifolo. É um prazer recebê-lo
+                        (a)
+                        aqui.
+
+                        Atualmente cursando Faculdade de Analises e Desenvolvimento na UNIFCS, com foco de atuar como
+                        analista
+                        de rede ou Programador.
+
+                        Atuo a mais de 4 anos na área de T.I.
+                        Atualmente trabalho na Empresa ATInfo Telecom, no ramo de provedor de internet, atuando como NOC
+                        (Network Operation Center). Oferto suporte remoto e pessoal a cliente e técnicos de campo para
+                        solução
+                        de problemas, entre outros muitos serviços.
+
+                        Trabalhei na na empresa Compunet Informatica, prestando serviços a clientes autônomos e empresas
+                        de
+                        pequeno e grande porte: Manutenção em Hardwares, Softwares, Impressoras, carregamentos de
+                        tonner,
+                        cartuchos, suporte de softwares, tendo contato direto com o cliente.
+
+                        Enfim, isto é um breve resumo, recomendo da uma olhada no linkedin. Obrigado por fazer está
+                        visita.</span>
+                </div>
+                <div class="conteinerendereço">
+                    <div class="enderecos"> <span>Nome:</span>
+                        <p>Ruan dos Santos Evangelista</p>
+                        <span>Email:</span>
+                        <p>santtosr9909@gmail.com</p>
+                        <span>Idade</span>
+                        <p>23 anos</p>
+                        <span>Cidade:</span>
+                        <p>Ibotirama-BA</p>
+                    </div>
+                    <button class="btnwhats">Enviar via WhatsApp</button>
+                </div>
+            </section>
+
+        </section>
+    </section>
+
 </html>
