--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
     </header>
 
-    <!--CONTEM MEUS LINK DE REDES SOCIAIS-->
+                                         <!--CONTEM MEUS LINK DE REDES SOCIAIS-->
     <section class="conteudo">
         <section class="asides">
             <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
@@ -48,7 +48,7 @@
             <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-envelope-at-fill"></i></a>
         </section>
 
-        <!--CONTE MEU DADOS AO LADO DE LOGOS REDES SOCIASI-->
+                                                    <!--CONTE MEU DADOS AO LADO DE LOGOS REDES SOCIASI-->
         <section class="conteudocentral">
             <div class="meusconteudos">
                 <div class="internomes">
@@ -56,7 +56,7 @@
                     <h1>RUAN DOS SANTOS</h1>
                 </div>
 
-                <!--BOTÃO MOSTRAM MAIS (direcina para, minha aba sobre)-->
+                                                      <!--BOTÃO MOSTRAM MAIS (direcina para, minha aba sobre)-->
 
                 <a class="buttonm" href="#" target="_blank" rel="noopener noreferrer"><button>Mais sobre
                     </button></a>
@@ -65,6 +65,7 @@
         </section>
     </section>
 
+                                                     <!--Container do meu sobre mim-->
     <section class="conteinersobremim">
         <section class="sobremim">
             <section class="conteinersobremim2">
@@ -73,12 +74,14 @@
                     <span id="umpouco">Um pouco sobre mim</span>
                 </div>
             </section>
+
+                                            <!--seção onde contém a minha decrição, minha carreira de forma resumida-->
             <section class="descricao">
                 <div class="descicaointer">
                     <p id="paragrafo1">Eu me chamo <span id="mudacor">Ruan Santos</span> , Técnico em informatica,
                         Telecomunicações, e futuro DEV</p>
 
-                    <span class="descricaosobremim">Olá, seja muito bem vindo(a) ao meu protifolo. É um prazer recebê-lo
+                    <span class="descricaosobremim">Seja muito bem vindo(a) ao meu protifolo. É um prazer recebê-lo
                         (a)
                         aqui.
 
@@ -101,7 +104,15 @@
                         Enfim, isto é um breve resumo, recomendo da uma olhada no linkedin. Obrigado por fazer está
                         visita.</span>
                 </div>
+
+
+
+                <!--conteiner onde contem enredeço, email, e botão de whatsapp-->
                 <div class="conteinerendereço">
+                    <div class="fotoeu">
+                        <img src="/img/fotoeu/1691063318280.jpg" alt="">
+                    </div>
+
                     <div class="enderecos"> <span>Nome:</span>
                         <p>Ruan dos Santos Evangelista</p>
                         <span>Email:</span>
