--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <!--LINK ICONS BOOTRAP-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!--LINK CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/style.css">
     <title>Protifoli | Ruan Santos</title>
 </head>
@@ -38,7 +43,7 @@
         </nav>
     </header>
 
-                                         <!--CONTEM MEUS LINK DE REDES SOCIAIS-->
+    <!--CONTEM MEUS LINK DE REDES SOCIAIS-->
     <section class="conteudo">
         <section class="asides">
             <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
@@ -48,7 +53,7 @@
             <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-envelope-at-fill"></i></a>
         </section>
 
-                                                    <!--CONTE MEU DADOS AO LADO DE LOGOS REDES SOCIASI-->
+        <!--CONTE MEU DADOS AO LADO DE LOGOS REDES SOCIASI-->
         <section class="conteudocentral">
             <div class="meusconteudos">
                 <div class="internomes">
@@ -56,7 +61,7 @@
                     <h1>RUAN DOS SANTOS</h1>
                 </div>
 
-                                                      <!--BOTÃO MOSTRAM MAIS (direcina para, minha aba sobre)-->
+                <!--BOTÃO MOSTRAM MAIS (direcina para, minha aba sobre)-->
 
                 <a class="buttonm" href="#" target="_blank" rel="noopener noreferrer"><button>Mais sobre
                     </button></a>
@@ -65,7 +70,7 @@
         </section>
     </section>
 
-                                                     <!--Container do meu sobre mim-->
+    <!--Container do meu sobre mim-->
     <section class="conteinersobremim">
         <section class="sobremim">
             <section class="conteinersobremim2">
@@ -75,7 +80,7 @@
                 </div>
             </section>
 
-                                            <!--seção onde contém a minha decrição, minha carreira de forma resumida-->
+            <!--seção onde contém a minha decrição, minha carreira de forma resumida-->
             <section class="descricao">
                 <div class="descicaointer">
                     <p id="paragrafo1">Eu me chamo <span id="mudacor">Ruan Santos</span> , Técnico em informatica,
@@ -128,5 +133,58 @@
 
         </section>
     </section>
+    <section class="conteinercarrossel">
+        <section class="conteinerportifolionome">
+            <span id="portifolio1">PORTIFOLIO</span>
+            <div class="portifolio2">
+                <span id="portifolio3">Meus projetos</span>
+            </div>
+        </section>
+        <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/img/portifolio/loading-page-ps5-nova.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/img/portifolio/loading-page-ati-cam1.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <a class="linkfullcam" href="https://ruandossantos.github.io/atinfocamerasfullcam/" target="_blank" rel="noopener noreferrer">Acessa Projeto</a>
+                        <p>Projeto criado para monitoramento, juntamente a ATinfo!</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/img/portifolio/landipage-formulario1.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Third slide label</h5>
+                        <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </section>
+
+</body>
 
 </html>
