--- a/index.html
+++ b/index.html
@@ -132,7 +132,55 @@
             </section>
         </section>
     </section>
-
+    <section class="conteinerprojetos">
+        <div class="projeto">
+            <p>PORTIFOLIO</p>
+            <span>Meus projetos</span>
+        </div>
+        <div class="carrosselportifolios">
+            <div id="carouselExampleDark" class="carousel carousel-dark slide">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="./img/portifolio/landipage-formulario1.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>projeto - Loanding Page</h5>
+                      <button class="acesso"><a href="https://ruandossantos.github.io/loadingpageMain/" target="_blank" rel="noopener noreferrer">Acessa projeto</a></button>
+                      <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item" data-bs-interval="2000">
+                    <img src="./img/portifolio/loading-page-ati-cam1.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Landing Page - Monitoramento</h5>
+                      <button class="acesso"><a href="https://ruandossantos.github.io/atinfocamerasfullcam/" target="_blank" rel="noopener noreferrer">Acessar projeto</a></button>
+                      <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/portifolio/loading-page-ps5-nova.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Landing Page -  PS5</h5>
+                      <button class="acesso"><a href="https://landingps5.netlify.app/" target="_blank" rel="noopener noreferrer">Acessar projeto</a></button>
+                      <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </div>
+    </section>
 
 </body>
 
